--- a/resources/style.css
+++ b/resources/style.css
@@ -61,3 +61,7 @@ table.rtorrent_download_table td {
 table.rtorrent_download_table td:first-child {
     text-align: left;
 }
+
+a.rtorrent_table_link {
+    font-size: 12px;
+}
