--- a/resources/style.css
+++ b/resources/style.css
@@ -33,7 +33,8 @@ li {
     margin-bottom: 5px
 }
 
-table.rtorrent_download_table {
+table.rtorrent_download_table,
+table.router_devices_table {
     width: 100%;
     margin: 10px auto;
     border-collapse: collapse;
@@ -42,7 +43,8 @@ table.rtorrent_download_table {
     border-color: #A00000;
 }
 
-table.rtorrent_download_table th {
+table.rtorrent_download_table th,
+table.router_devices_table th {
     border-style: solid;
     border-width: 1px;
     border-color: #A00000;
@@ -50,7 +52,8 @@ table.rtorrent_download_table th {
     background-color: #A00000;
 }
 
-table.rtorrent_download_table td {
+table.rtorrent_download_table td,
+table.router_devices_table td {
     text-align: center;
     padding: 5px;
     border-style: solid;
@@ -59,6 +62,11 @@ table.rtorrent_download_table td {
 }
 
 table.rtorrent_download_table td:first-child {
+    text-align: left;
+}
+
+table.router_devices_table td:first-child,
+table.router_devices_table td:nth-child(2) {
     text-align: left;
 }
 
