--- a/resources/style.css
+++ b/resources/style.css
@@ -34,7 +34,8 @@ li {
 }
 
 table.rtorrent_download_table,
-table.router_devices_table {
+table.router_devices_table,
+table.latest_sensors_table {
     width: 100%;
     margin: 10px auto;
     border-collapse: collapse;
@@ -44,7 +45,8 @@ table.router_devices_table {
 }
 
 table.rtorrent_download_table th,
-table.router_devices_table th {
+table.router_devices_table th,
+table.latest_sensors_table th {
     border-style: solid;
     border-width: 1px;
     border-color: #A00000;
@@ -53,7 +55,8 @@ table.router_devices_table th {
 }
 
 table.rtorrent_download_table td,
-table.router_devices_table td {
+table.router_devices_table td,
+table.latest_sensors_table td {
     text-align: center;
     padding: 5px;
     border-style: solid;
